# Agent

./: README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: agent_manager.py  interoperability.py  main.py  models.py  task_queue.py  tool_runtime.py
app/static/: index.html
apps/builder-ui/: package.json
apps/builder-ui/src/: index.js
apps/builder-ui/test/: smoke.test.js
docs/: architecture.md  roadmap.md
local_agent_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/model-gateway/: package.json
services/model-gateway/src/: adapters.js
services/model-gateway/test/: adapters.test.js
services/observability/: package.json
services/observability/src/: index.js
services/observability/test/: smoke.test.js
services/orchestrator/: package.json
services/orchestrator/src/: engine.js  errors.js
services/orchestrator/test/: engine.test.js
services/policy/: package.json
services/policy/src/: index.js
services/policy/test/: smoke.test.js
services/tool-registry/: package.json
services/tool-registry/src/: manifest.js
services/tool-registry/test/: manifest.test.js
src/agent_builder/: __init__.py  adapters.py  negotiation.py  schemas.py
tests/: test_agent_manager.py  test_api.py  test_interoperability.py  test_negotiation.py  test_task_queue.py  test_tool_runtime.py
